# active-fed

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_pipeline.sh
.github/workflows/: ci.yml
analysis/: compare_runs.py  fetch_k8s_runs.py
config/: k8s.yaml  local.yaml
docker/: Dockerfile.aggregator  Dockerfile.worker
experiments/: run_experiments.py
k8s/: minio.yaml  mlflow-server.yaml  rbac.yaml
setup/: install_local.sh  kind-cluster.yaml  teardown_local.sh
src/agent/: model.py  ppo_agent.py  train_worker.py
src/aggregator/: active_data.py  aggregator.py  collect.py  evaluator.py  scorer.py
src/experiment/: env_wrapper.py  local_runner.py
src/pipelines/: active_fl_pipeline.py  run_pipeline.py
src/tracking/: mlflow_logger.py
tests/: conftest.py  test_active_data.py  test_agent.py  test_aggregator.py  test_collect.py  test_evaluator.py  test_local_runner.py  test_mlflow_logger.py  test_scorer.py  test_train_worker.py
